--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -20,7 +20,7 @@
             <p><input type="checkbox" value="cats" id="cats" /> <label for="cats"> Cats</label></p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <p><input type="checkbox" value="dogs" id="dogs" /> <label for="dogs"> Dogs</label></p><br><br>
             <p>Features:</p>
-            <p><input type="checkbox" value="inunit" id="inunit" /> <label for="inunit"> In Unity</label></p><br>
+            <p><input type="checkbox" value="inunit" id="inunit" /> <label for="inunit"> In Unit</label></p><br>
             <p><input type="checkbox" value="onsite" id="onsite" /> <label for="onsite"> Laundry on-Site</label></p><br>
             <p><input type="checkbox" value="ac" id="ac" /> <label for="ac"> Central HVAC</label></p><Br>
             <p><input type="checkbox" value="heat" id="heat" /> <label for="heat"> Heat Included</label></p><br>
