updated logo, removed saved and fav from nav, implemented stacked slide in listings, updated image for rent, full partialed css, deleted unneeded css files, updated slide.js to size properly on collapse

--- a/app/assets/stylesheets/_forms.css
+++ b/app/assets/stylesheets/_forms.css
@@ -1,3 +1,4 @@
+@import "base";
 /* Just some base styles not needed for example to function */
 *, html { font-family: Verdana, Arial, Helvetica, sans-serif; }
 
