--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,12 @@
 <body>
 <div class="container">
 	<header class="light">
-				<div class="logo">
-	
-						<a href="<%= root_url %>"><span class="logorent">Real </span>Transparent</a>
-				</div>
+					<div class="logo">
+					<div class="skyline"></div>
+					<div class="logoreal">
+						<a href="<%= root_url %>"><span class="logotransparent">Real </span>Transparent</a>
+					</div>
+					</div>
 					<% if session["user_id"] %>
 						<span class="blue-button-head">Logged in as: <%= User.find(session[:user_id]).name.capitalize %></span><br>
 						<a href="../logout" class="blue-button" style="color: white;">	Sign Out</a>
@@ -31,7 +33,10 @@
 			<div class="shell">
 				<ul id="menu-main-navigation" class="menu">
 					<li id="menu-item-50" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50">
-						<a href="<%= listings_url %>">Listings</a></li>
+						<a href="<%= root_url %>">Home</a></li>
+					</li>
+					<li id="menu-item-50" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50">
+						<a href="<%= listings_url %>">Search Listings</a></li>
 					<% if session["user_id"] && User.find(session[:user_id]).landlord == true %>
 						<li id="menu-item-52" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52">
 						<a href="<%= new_listing_url %>">List Apartment</a></li>
@@ -39,19 +44,6 @@
 						<li id="menu-item-52" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52">
 						<a href="#">List Apartment</a></li>
 					<% end %>
-				<% if session["user_id"] %>
-					<li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-51">
-						<a href="#">Saved Searches</a></li>
-				<% else %>
-				<li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-51">
-						<a href="#">Saved Searches</a></li>
-				<% end %>
-				<% if session["user_id"] %>
-					<li id="menu-item-53" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-53">
-						<a href="<%= user_url(session[:user_id]) %>">My Favorites</a></li>
-				<% else %>
-					<li id="menu-item-53" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-53"><a href="#">My Favorites</a></li>
-						<% end %>
 				</ul>
 			</div>
 		</div>
