--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -1,18 +1,40 @@
-@import 'sassybuttons';
+@import "mixins";
+@import "sassybuttons";
 
 * { margin: 0; padding: 0; outline: 0; }
 
-body, html { height: 100%; }
+body, html { 
+	height: 100%; 
+}
 
-a { color: #f05023; text-decoration: none; cursor: pointer; }
-a:hover { text-decoration: underline; }
-a img { border: 0; }
+a { 
+	color: #f05023; 
+	text-decoration: none; 
+	cursor: pointer; 
+}
 
-input, textarea, select { font-size: 12px; font-family: arial, sans-serif; }
-textarea { overflow: auto; resize: none; }
-fieldset { border: none; }
+a:hover { 
+	text-decoration: underline; 
+}
+a img { 
+	border: 0; 
+}
 
-header, article, footer, aside, nav, section { display: block; }
+input, textarea, select { 
+	font-size: 12px; 
+	font-family: arial, sans-serif; 
+}
+textarea { 
+	overflow: auto; 
+	resize: none; 
+}
+fieldset { 
+	border: none; 
+}
+
+header, article, footer, aside, nav, section { 
+	display: block; 
+}
 
 .cl { display: block; height: 0; font-size: 0; line-height: 0; text-indent: -4000px; clear: both; }
 .notext { font-size: 0; line-height: 0; text-indent: -4000px; }
@@ -20,283 +42,183 @@ header, article, footer, aside, nav, section { display: block; }
 .right { float: right; display: inline; }
 .no-boxshadow .shadow { display: none; }
 
-// .shell { width: 982px; margin: 0 auto; padding: 0 9px; }
-// header.dark { background: #1a1a1a; position: relative; z-index: 10; box-shadow: 0 2px 2px rgba(0,0,0,0.9); }
-// header.dark .shell { height: 110px; position: relative; }
-// header.dark #logo { float: left; padding: 16px 0 0; }
-// header.dark #logo.mobile a { width: 166px; }
-
-header.light { background: #ececec; width: 100%; height: 150px; position: fixed; top: 0; left: 0; z-index: 99; box-shadow: 0 1px 40px rgba(0,0,0,0.3); }
-header.light .shell { height: 75px; }
-header.light nav { padding: 6px 0 0 48px; font-size: 14px; line-height: 37px; text-transform: uppercase; text-shadow: 0 1px 1px rgba(255,255,255,.9); }
-header.light nav a { color: #252525; float: left; padding: 0 17px; }
-header.light nav a + a { margin-left: 15px; }
-header.light a:hover { text-decoration: none; }
-header.light nav a.current { padding: 0 16px; border: 1px solid #d5d5d5; border-radius: 10px; background: #b2d6ec; box-shadow: 0 1px 0 #e0eff7 inset, 1px 0 0 #e0eff7 inset, -1px 0 0 #e0eff7 inset, 0 -1px 0 #e0eff7 inset; line-height: 35px; }
-
-header.light a.trial {width: 105px; height: 72px; padding: 13px 20px 0; text-align: center; font-size: 18px; line-height: 18px; font-weight: bold; color: #d8ecb2; text-shadow: 0 1px 1px rgba(0,0,0,0.7); position: relative; margin: 0 48px -35px 20px; }
-header.light a.trial:hover { color: #fff; }
-header.light a.colorbox { margin: 6px 0 0; color: #252525; padding: 0 17px; font-size: 14px; line-height: 37px; text-transform: uppercase; text-shadow: 0 1px 1px rgba(255,255,255,1); }
-
-footer.dark { background: #525252; }
-footer.dark .shell { height: 59px; }
-footer.dark p { font-size: 12px; line-height: 58px; text-align: center; color: #fff; }
-footer.dark p a { color: #fff; text-decoration: none; }
-footer.dark p a:hover { text-decoration: underline; }
-
-footer.light { background: #ececec; position: relative; z-index: 3; padding: 0 0 24px; width: 100%; }
-footer.light .shell { width: 902px; background: #b2d6ec; border: 1px solid #d5d5d5; box-shadow: 0 0 1px #e0eff7 inset; padding: 40px 72px 40px 38px; overflow: hidden; }
-footer.light .cloudmanic { width: 242px; height: 50px; }
-footer.light .socials { width: 160px; padding: 2px 0 0; }
-footer.light .socials a { float: left; width: 41px; height: 41px; }
-footer.light .socials a + a { margin-left: 18px; }
-footer.light .socials .email { background-position: 0 0; }
-footer.light .socials .twitter { background-position: 0 -41px; }
-footer.light .socials .facebook { background-position: 0 -82px; }
-footer.light .foot-nav { font-size: 12px; line-height: 50px; color: #000; text-align: center; text-indent: -30px; word-spacing: 4px; }
-footer.light .foot-nav a { word-spacing: 0; color: #000; }
-
 #wrap { overflow: hidden; min-height: 100%; height: auto !important; height: 100%; }
 
-#intro { box-shadow: 0 0 200px rgba(0,0,0,0.9) inset; padding: 200px 0 125px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1; min-height: 215px; text-align: center; }
-#intro #logo a { width: 435px; height: 125px; position: absolute; top: 132px; left: 50%; margin-left: -217px; text-align: left; }
-#intro h2 { font-size: 32px; color: #b7b7b7; word-spacing: 1px; text-shadow: 0 2px 2px #000; padding: 0 0 70px; }
-#intro p { font-size: 16px; }
-#intro .theme-big-blue-button { margin: 0 0 12px; }
+#intro { 
+	box-shadow: 0 0 200px rgba(0,0,0,0.9) inset; 
+	padding: 200px 0 125px; 
+	position: fixed; top: 0; 
+	left: 0; 
+	width: 100%; 
+	z-index: 1; 
+	min-height: 215px; 
+	text-align: center; 
+}
+#intro #logo a { 
+	width: 435px; 
+	height: 125px; 
+	position: absolute; 
+	top: 132px; 
+	left: 50%; 
+	margin-left: -217px; 
+	text-align: left; 
+}
+#intro h2 { 
+	font-size: 32px; 
+	color: #b7b7b7; 
+	word-spacing: 1px; 
+	text-shadow: 0 2px 2px #000; 
+	padding: 0 0 70px; 
+}
+#intro p { 
+	font-size: 16px; 
+}
+#intro .theme-big-blue-button { 
+	margin: 0 0 12px; 
+}
 
-#tour { margin: 715px 0 0; position: relative; width: 100%; z-index: 2; padding: 20px 0 0; box-shadow: 0 0 40px rgba(0,0,0,0.15); border-bottom: 1px solid #fff; }
-#tour .top { width: 100%; height: 75px; position: absolute; top: -50px; left: 0; }
-#tour .content { background: #ececec; min-height: 718px; }
-#tour .shell { padding: 0px 9px 26px; }
-#tour h2 { font-size: 30px; text-align: center; padding: 0 0 24px; }
-#tour .slide-info h3 { font-size: 21px; padding: 0 0 4px; }
-#tour p { font-size: 18px; line-height: 24px; }
-#tour .slide-info { text-align: center; display: none; color: #292929; width: 982px; }
-
-#main { background: #ececec }
-#main .shell { padding: 28px 0; }
-#navigation { width:100%; position:relative; z-index: 9; }
-#navigation .shell { height:40px;  }
-#navigation li {  width:250px; text-align:center; font-size:16px; float:left;  }
-#navigation li a { display:block;  }
-#navigation li a:hover { text-decoration:none;  }
-
-#main-nav {background:url(../assets/section-divider.png) no-repeat center bottom; height:40px;  }
-#main-nav .shell {  background:url(../assets/nav-shadow.png) no-repeat center bottom; padding-bottom:26px; margin-bottom:-26px;  height:40px;   }
-#main-nav li {line-height:39px; height:39px; }
-#main-nav li a { color:#f05023;  }
-#main-nav li.current-menu-item a,
-#main-nav li.current-page-parent a,
-#main-nav li.current-page-ancestor a,
-#main-nav li a:hover { background-color: #3D3A39; text-shadow: 0px 0px 0px #3D3A39; }
-#main-nav li.current-menu-item a,
-#main-nav li.current-page-parent a,
-#main-nav li.current-page-ancestor a { font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; }
-
-#navigation.type2 { margin-bottom:63px; }
+#tour { 
+	margin: 715px 0 0; 
+	position: relative; 
+	width: 100%; 
+	z-index: 2; 
+	padding: 20px 0 0; 
+	box-shadow: 0 0 40px rgba(0,0,0,0.15); 
+	border-bottom: 1px solid #fff; 
+}
+#tour .top { 
+	background: url(home-welcome.png) 50% 0 repeat-x; 
+	width: 100%; 
+	height: 75px; 
+	position: absolute; 
+	top: -50px; 
+	left: 0; 
+}
+#tour .content { 
+	background: #ececec; 
+	min-height: 718px; 
+}
+#tour .shell { 
+	padding: 0px 9px 26px; 
+}
+#tour h2 { 
+	font-size: 30px; 
+	text-align: center; 
+	padding: 0 0 24px; 
+}
+#tour .slide-info h3 { 
+	font-size: 21px; 
+	padding: 0 0 4px; 
+}
+#tour p { 
+	font-size: 18px; 
+	line-height: 24px; 
+}
+#tour .slide-info { 
+	text-align: center; 
+	display: none; 
+	color: #292929; 
+	width: 982px; 
+}
 
 #headfoot {
 	margin-top: 40px;
 	background: url(../assets/section-divider.png) no-repeat center bottom; 
 	height:40px;  
 }
-	
-.btn-search {
-	@include sassy-button("matte", 5px, 19px, #cede85, #a7bf35, #fff, "inset");
-	font-size: 18px;
-	height: 45px;
-	margin-top: 30px;
-}
 
-.ch-grid {
-    margin: -50px 0 0 0;
-    padding: 0;
-    list-style: none;
-    display: block;
-    text-align: center;
-    width: 100%;
-}
- 
-.ch-grid:after,
-.ch-item:before {
-    content: '';
-    display: table;
-}
- 
-.ch-grid:after {
-    clear: both;
-}
- 
-.ch-grid li {
-    width: 220px;
-    height: 220px;
-    display: inline-block;
-    margin: 20px;
-}
-
-.ch-item {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	position: relative;
-	cursor: default;
-	-webkit-perspective: 900px;
-	-moz-perspective: 900px;
-	-o-perspective: 900px;
-	-ms-perspective: 900px;
-	perspective: 900px;
-}
-
-.ch-info{
+.skyline{
+	background-image: url(/assets/chisky.jpg);
+	width: 200px;
+	height: 120px;
+	background-size: cover;
+	opacity: .1;
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	-webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	-o-transform-style: preserve-3d;
-	-ms-transform-style: preserve-3d;
-	transform-style: preserve-3d;
+	bottom: 60px;
+	left: 5px;
+	z-index: 1;
 }
 
-.ch-info > div {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	background-position: center center;
-	-webkit-transition: all 0.4s linear;
-	-moz-transition: all 0.4s linear;
-	-o-transition: all 0.4s linear;
-	-ms-transition: all 0.4s linear;
-	transition: all 0.4s linear;
-	-webkit-transform-origin: 50% 0%;
-	-moz-transform-origin: 50% 0%;
-	-o-transform-origin: 50% 0%;
-	-ms-transform-origin: 50% 0%;
-	transform-origin: 50% 0%;
+a { 
+	color: #f05023; 
+	text-decoration: none; 
+	cursor: pointer; 
+}
+a:hover { 
+	text-decoration: underline; 
+}
+a img { 
+	border: 0; 
 }
 
-.ch-info .ch-info-front {
-	box-shadow: inset 0 0 0 16px rgba(0,0,0,0.3);
+h2 { 
+	font-size:24px; 
+	text-shadow: 0 1px 1px rgba(255,255,255,.3); 
+	-webkit-font-smoothing: antialiased; 
+	font-smoothing: antialiased; 
+	font-weight: normal; 
+	font-family: 'HelveticaLight', Helvetica, Arial, sans-serif; 
+	line-height:24px; 
 }
 
-.ch-info .ch-info-back {
-	-webkit-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg);
-	-moz-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg);
-	-o-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg);
-	-ms-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg);
-	transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg);
-	background: #000;
-	opacity: 0;
+h3,h4 { 
+	font-size:18px; 
+	font-family: 'HelveticaBold', 
+	Helvetica, Arial, sans-serif; 
+	font-weight:normal; 
+	line-height:22px;   
+}
+h4 { font-size:17px;  
 }
 
-.ch-img-1 { 
-	background-image: url(/assets/orange1.jpeg);
+input, textarea, select { 
+	font-size: 12px; 
+	font-family: 'HelveticaLight', Helvetica, Arial, sans-serif; 
+}
+textarea { 
+	overflow: auto; 
 }
 
-.ch-img-2 { 
-	background-image: url(/assets/green5.jpeg);
+ul, ol { 
+	list-style:none outside none 
 }
 
-.ch-img-3 { 
-	background-image: url(/assets/dollar3.jpeg);
-}
-
-.ch-info h3 {
-	color: #fff;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 24px;
-	margin: 0 15px;
-	padding: 60px 0 0 0;
-	height: 60px;
+strong { 
 	font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; 
-	text-shadow: 
-		0 0 1px #fff, 
-		0 1px 2px rgba(0,0,0,0.3);
+	font-weight:normal;  
 }
 
-.ch-info p {
-	color: #fff;
-	padding: 10px 5px;
-	font-style: italic;
-	margin: 0 30px;
-	font-size: 12px;
-	border-top: 1px solid rgba(255,255,255,0.5);
+.cl { 
+	display: block; 
+	height: 0; 
+	font-size: 0; 
+	line-height: 0; 
+	text-indent: -4000px; 
+	clear: both; 
+}
+.notext { 
+	font-size: 0; 
+	line-height: 0; 
+	text-indent: -4000px; 
+}
+.left, .alignleft { 
+	float: left; 
+	display: inline; 
 }
 
-.ch-info p a {
-	display: block;
-	color: #fff;
-	color: rgba(255,255,255,0.7);
-	font-style: normal;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 9px;
-	letter-spacing: 1px;
-	padding-top: 4px;
-	font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; 
+.right, .alignright { 
+	float: right; 
+	display: inline; 
+}
+p.clear-both { 
+	clear: both; 
 }
 
-.ch-info p a:hover {
-	color: #fff222;
-	color: rgba(255,242,34, 0.8);
+.shell { 
+	width:1000px; 
+	margin:0 auto; 
+	position:relative;  
 }
-
-.ch-item:hover .ch-info-front {
-	-webkit-transform: translate3d(0,280px,0) rotate3d(1,0,0,-90deg);
-	-moz-transform: translate3d(0,280px,0) rotate3d(1,0,0,-90deg);
-	-o-transform: translate3d(0,280px,0) rotate3d(1,0,0,-90deg);
-	-ms-transform: translate3d(0,280px,0) rotate3d(1,0,0,-90deg);
-	transform: translate3d(0,280px,0) rotate3d(1,0,0,-90deg);
-	opacity: 0;
-}
-
-.ch-item:hover .ch-info-back {
-	-webkit-transform: rotate3d(1,0,0,0deg);
-	-moz-transform: rotate3d(1,0,0,0deg);
-	-o-transform: rotate3d(1,0,0,0deg);
-	-ms-transform: rotate3d(1,0,0,0deg);
-	transform: rotate3d(1,0,0,0deg);
-	opacity: 1;
-}
-
-.bedbathdrop {
-	margin-top: 100px;
-}
-
-.rentdrop {
-	margin-top: 80px;
-}
-
-a { color: #f05023; text-decoration: none; cursor: pointer; }
-a:hover { text-decoration: underline; }
-a img { border: 0; }
-
-h2 { font-size:24px; text-shadow: 0 1px 1px rgba(255,255,255,.3); -webkit-font-smoothing: antialiased; font-smoothing: antialiased; font-weight: normal; font-family: 'HelveticaLight', Helvetica, Arial, sans-serif; line-height:24px; }
-h3,h4 { font-size:18px; font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; font-weight:normal; line-height:22px;   }
-h4 { font-size:17px;  }
-
-input, textarea, select { font-size: 12px; font-family: 'HelveticaLight', Helvetica, Arial, sans-serif; }
-textarea { overflow: auto; }
-
-ul, ol { list-style:none outside none }
-
-strong { font-family: 'HelveticaBold', Helvetica, Arial, sans-serif; font-weight:normal;  }
-
-.cl { display: block; height: 0; font-size: 0; line-height: 0; text-indent: -4000px; clear: both; }
-.notext { font-size: 0; line-height: 0; text-indent: -4000px; }
-.left, .alignleft { float: left; display: inline; }
-.right, .alignright { float: right; display: inline; }
-p.clear-both { clear: both; }
-
-.shell { width:1000px; margin:0 auto; position:relative;  }
-
-#header,
-#footer{ background:url(section-divider.png) no-repeat center bottom; }
-#footer { background-position:center 0; }
-#header { padding:13px 0 16px; position:relative; width:100%; z-index: 10; }
 
 blockquote {
 font-family: Georgia, serif;
