--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -1,4 +1,4 @@
-.map_container {
+/*.map_container {
   padding: 6px;
   border-width: 1px;
   border-style: solid;
@@ -25,3 +25,4 @@
    border:#555555 2px solid;
 }
 
+*/
