fixed main search bar

--- a/app/views/listings/home.html.erb
+++ b/app/views/listings/home.html.erb
@@ -62,9 +62,9 @@
                     </li>
                 </ul>
          <!--  <form id="searchbox" action=""> -->
-          <%= form_tag listings_url, :id => 'searchbox', :method => 'get' do %>
+          <%= form_tag listings_path, :id => 'searchbox', :method => 'get' do %>
           <!-- search bar id is in text field tag -->
-          <%= text_field_tag :searchhome, params[:search], :placeholder => ' City, Zip, Neighborhood'%><br><br>
+          <%= text_field_tag :search, params[:search], :placeholder => ' City, Zip, Neighborhood'%><br><br>
           <%= submit_tag 'Find Apartments', :class=> 'btn-search', :name => nil %>
           <% end %>        
 </section>  </section>
