better search using Gmaps4rails.places

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 						<a href="<%= new_listing_url %>">List Apartment</a></li>
 					<% else %>
 						<li id="menu-item-52" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52">
-						<a href="#">List Apartment</a></li>
+						<a href="<%= new_listing_url %>">List Apartment</a></li>
 					<% end %>
 				</ul>
 			</div>
